fix: Header spacing (#23)
* fix: Header spacing

* fix: gap space in the chain/token hero component

--- a/src/components/CCIP/ChainHero/ChainHero.css
+++ b/src/components/CCIP/ChainHero/ChainHero.css
@@ -35,7 +35,7 @@
 }
 
 .ccip-chain-hero__content {
-  --gutter: var(--space-2x);
+  --gutter: var(--space-10x);
   --doc-padding: 2rem;
   gap: var(--gutter);
   padding-left: var(--space-4x);
@@ -66,10 +66,6 @@
   display: grid;
   gap: var(--space-4x);
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-}
-
-.ccip-chain-hero__feeTokens {
-  margin-top: var(--space-10x);
 }
 
 .ccip-chain-hero__details__label {
